--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^10.7.1",
     "lucide-react": "^0.429.0",
     "next": "14.2.5",
-    "firebase": "^10.7.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
