--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^10.1.0",
     "ui": "^0.2.4",
     "uuid": "^11.1.0"
   },
