--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "firebase": "^10.7.1",
     "lucide-react": "^0.429.0",
     "next": "14.2.5",
